<resources>
    <string name="app_name">ContactsManager</string>
    <string name="show_additional_fields">Show additional fields</string>
    <string name="hide_additional_fields">Hide additional fields</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="job_title">Job title</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="im">IM</string>
    <string name="phone_error">Phone error</string>
</resources>
